@@ -16,11 +16,8 @@
 
 package com.lnf.client.service;
 
-import com.lnf.client.converter.DocumentConverter;
 import com.lnf.client.model.Client;
-import com.lnf.client.model.ClientDocument;
 import com.lnf.client.model.enums.DocumentType;
-import com.lnf.client.repository.ClientDocumentRepository;
 import com.lnf.client.repository.ClientRepository;
 import com.lnf.dto.client.DocumentDto;
 import com.lnf.dto.file.FileDto;
@@ -33,16 +30,16 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
-import java.io.IOException;
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
+import java.util.UUID;
 
 @Service
 @Transactional
@@ -53,12 +50,8 @@ public class DocumentService {
     public static final String S_S_S_S = "%s/%s/%s/%s";
     public static final String S_S_S = "%s/%s/%s/";
     private final ClientRepository clientRepository;
-    private final ClientDocumentRepository repository;
     private final FileFolderService fileFolderService;
     private final FileService fileService;
-
-    @Value("${aws.s3.bucket.enabled}")
-    private boolean awsS3BucketEnabled;
 
     @Value("${aws.s3.bucket.folderName}")
     private String folderName;
@@ -72,37 +65,36 @@ public class DocumentService {
      */
     public DocumentDto findByClientId(UUID clientId, String type) {
         try {
-            if (awsS3BucketEnabled) {
-                var filePath = S_S_S.formatted(folderName, clientId, type);
-                List<FileDto> filePaths = fileFolderService.findFiles(filePath);
-                if (filePaths == null || filePaths.isEmpty()) {
-                    log.error("Document not found for client {} ", clientId);
-                    return null;
-                }
-
-                return setDocumentDto(clientId, type, filePaths);
-            } else {
-                searchForClient(clientId);
-                ClientDocument entity = searchForDocument(clientId, DocumentType.valueOf(type));
-                DocumentDto documentDto = DocumentConverter.toTransportModel(entity);
-                documentDto.setUrl(DocumentConverter.getDocumentUrl(clientId, documentDto.getId(), DocumentType.valueOf(type)));
-                return documentDto;
+            searchForClient(clientId);
+            var filePath = S_S_S.formatted(folderName, clientId, type);
+            List<FileDto> filePaths = fileFolderService.findFiles(filePath);
+            if (filePaths == null || filePaths.isEmpty()) {
+                return null;
             }
+            return setDocumentDto(clientId, type, filePaths);
         } catch (Exception e) {
             throw new LnFException("file not found for clientId:" + e.getMessage());
         }
     }
 
+    public static String constructUrlFromType(UUID clientId, DocumentType type) {
+        return switch (type) {
+            case agreement -> "/lnf/clients/%s/agreement/".formatted(clientId);
+            case image -> "/lnf/clients/%s/image/".formatted(clientId);
+            case others -> "/lnf/clients/%s/others/".formatted(clientId);
+        };
+    }
+
     private static DocumentDto setDocumentDto(UUID clientId, String type, List<FileDto> filePaths) {
-        var fileName = StringUtils.substringAfterLast(filePaths.get(0).getFileName(), "/");
+        var fileName = StringUtils.substringAfterLast(filePaths.getFirst().getFileName(), "/");
         String url = ServletUriComponentsBuilder.fromCurrentContextPath()
-                .path(DocumentConverter.constructUrlFromType(clientId, DocumentType.valueOf(type)))
+                .path(constructUrlFromType(clientId, DocumentType.valueOf(type)))
                 .path(fileName)
                 .toUriString();
 
         DocumentDto documentDto = new DocumentDto();
         documentDto.setName(fileName);
-        documentDto.setSize(filePaths.get(0).getFileSize());
+        documentDto.setSize(filePaths.getFirst().getFileSize());
         documentDto.setUrl(url);
         return documentDto;
     }
@@ -116,17 +108,9 @@ public class DocumentService {
      */
     public ResponseEntity<byte[]> findClientAgreement(UUID clientId, DocumentType type, String fileName) {
         try {
-            if (awsS3BucketEnabled) {
-                var filePath = S_S_S_S.formatted(folderName, clientId, type, fileName);
-                return fileService.findFileContent(filePath);
-            } else {
-                searchForClient(clientId);
-                ClientDocument entity = searchForDocument(clientId, type);
-                ClientDocument file = searchForDocument(entity.getId());
-                return ResponseEntity.ok().header(HttpHeaders.CONTENT_TYPE, "application/pdf")
-                        .contentType(MediaType.valueOf(file.getContentType()))
-                        .body(file.getContent());
-            }
+            searchForClient(clientId);
+            var filePath = S_S_S_S.formatted(folderName, clientId, type, fileName);
+            return fileService.findFileContent(filePath);
         } catch (RuntimeException e) {
             String errorMessage = "file not found for Client[%s]".formatted(clientId);
             throw new com.lnf.exception.LnFException(errorMessage, e);
@@ -136,22 +120,14 @@ public class DocumentService {
     /**
      * Returns ResponseEntity with byte[] of the Client by clientId and documentId
      *
-     * @param clientId   Client Id
-     * @param documentId Document Id
+     * @param clientId Client Id
      * @return ResponseEntity<byte [ ]>
      */
-    public ResponseEntity<byte[]> findById(UUID clientId, UUID documentId, DocumentType type, String fileName) {
+    public ResponseEntity<byte[]> findById(UUID clientId, DocumentType type, String fileName) {
         try {
-            if (awsS3BucketEnabled) {
-                var filePath = S_S_S_S.formatted(folderName, clientId, type, fileName);
-                return fileService.findFileContent(filePath);
-            } else {
-                searchForClient(clientId);
-                ClientDocument file = searchForDocument(documentId);
-                return ResponseEntity.ok().header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + file.getName() + "\"")
-                        .contentType(MediaType.valueOf(file.getContentType()))
-                        .body(file.getContent());
-            }
+            searchForClient(clientId);
+            var filePath = S_S_S_S.formatted(folderName, clientId, type, fileName);
+            return fileService.findFileContent(filePath);
         } catch (RuntimeException e) {
             String errorMessage = "file not found for client[%s]".formatted(clientId);
             throw new LnFException(errorMessage, e);
@@ -167,29 +143,10 @@ public class DocumentService {
      */
     public void create(UUID clientId, DocumentType type, MultipartFile file) {
         try {
-            if (awsS3BucketEnabled) {
-                var folder = S_S_S.formatted(folderName, clientId, type);
-                String filePath = uploadFile(folder, file);
-                log.debug("File uploaded successfully to S3 bucket: " + filePath);
-            } else {
-                Client client = searchForClient(clientId);
-                UUID documentId = null;
-                Optional<ClientDocument> entityOptional = repository.findByClientIdAndType(clientId, type);
-                if (entityOptional.isPresent()) {
-                    documentId = entityOptional.get().getId();
-                }
-                LnFBadRequestException.throwOnCondition(Objects::isNull, file, "Failed to create Document of type [%s] for client [%s] with null payload".formatted(type, client));
-                ClientDocument entity = DocumentConverter.toEntityModel(file, false);
-                if (documentId != null) {
-                    entity.setId(documentId);
-                }
-                entity.setClient(client);
-                entity.setType(type);
-                save(entity);
-                log.debug("Document {} for Client {} successfully created", file.getOriginalFilename(), clientId);
-            }
-        } catch (RuntimeException | IOException e) {
-
+            searchForClient(clientId);
+            var folder = S_S_S.formatted(folderName, clientId, type);
+            uploadFile(folder, file);
+        } catch (RuntimeException e) {
             String errorMessage = "Failed to create document[%s] for client [%s]".formatted(clientId, file.getOriginalFilename());
             throw new LnFException(errorMessage, e);
         }
@@ -198,28 +155,20 @@ public class DocumentService {
     /**
      * Updates the client document
      *
-     * @param clientId   Client id
-     * @param documentId Document Id
-     * @param file       Document in MultipartFile format
+     * @param clientId Client id
+     * @param file     Document in MultipartFile format
      */
-    public void update(UUID clientId, UUID documentId, DocumentType type, MultipartFile file) {
-        LnFBadRequestException.throwOnCondition(Objects::isNull, file, "Failed to update document for client [%s] with null payload".formatted(clientId));
+    public void update(UUID clientId, DocumentType type, MultipartFile file) {
+        LnFBadRequestException.throwOnCondition(Objects::isNull, file,
+                "Failed to update document for client [%s] with null payload".formatted(clientId));
         try {
-            if (awsS3BucketEnabled) {
-                var folder = S_S_S.formatted(folderName, clientId, type);
-                String filePath = uploadFile(folder, file);
-                log.debug("File {} for client  successfully updated in S3", filePath);
-            } else {
-                searchForClient(clientId);
-                ClientDocument entity = searchForDocument(documentId);
-                ClientDocument updatedEntity = DocumentConverter.toEntityModel(file, entity, false);
-                save(updatedEntity);
-            }
-        } catch (RuntimeException | IOException e) {
-            String errorMessage = "Failed to update document[%s] for client [%s]".formatted(documentId, clientId);
+            searchForClient(clientId);
+            var folder = S_S_S.formatted(folderName, clientId, type);
+            uploadFile(folder, file);
+        } catch (RuntimeException e) {
+            String errorMessage = "Failed to update document for client [%s]".formatted(clientId);
             throw new LnFException(errorMessage, e);
         }
-        log.debug("Document {} for Client {} successfully updated", documentId, clientId);
     }
 
     /**
@@ -229,63 +178,20 @@ public class DocumentService {
      * @param type     Enum DocumentType
      */
     public void deleteByClientId(UUID clientId, DocumentType type, String fileName) {
-        if (awsS3BucketEnabled) {
-            var filePath = S_S_S_S.formatted(folderName, clientId, type, fileName);
-            List<String> filePaths = Collections.singletonList(filePath);
-            fileService.delete(filePaths);
-            log.debug("S3 object deleted for client");
-        } else {
-            searchForClient(clientId);
-            ClientDocument entity = searchForDocument(clientId, type);
-            try {
-                repository.delete(entity);
-            } catch (RuntimeException e) {
-                String errorMessage = "Failed to delete document for client [%s]".formatted(clientId);
-                throw new LnFException(errorMessage, e);
-            }
-        }
-    }
-
-    /**
-     * Delete the client document by clientId and documentId
-     *
-     * @param clientId   Client Id
-     * @param documentId document Id
-     */
-    public void deleteById(UUID clientId, UUID documentId) {
         searchForClient(clientId);
-        ClientDocument entity = searchForDocument(documentId);
-        try {
-            repository.delete(entity);
-            log.debug("Document {} for client {} successfully deleted", documentId, clientId);
-        } catch (RuntimeException e) {
-            String errorMessage = "Failed to delete Document[[%s] for client [%s]".formatted(documentId, clientId);
-            throw new LnFException(errorMessage);
-        }
-    }
-
-    private void save(ClientDocument entity) {
-        try {
-            repository.save(entity);
-        } catch (RuntimeException e) {
-            String errorMessage = String.format("Failed to save Document for employee [%s]", entity.getClient().getId());
-            throw new LnFException(errorMessage);
-        }
+        var filePath = S_S_S_S.formatted(folderName, clientId, type, fileName);
+        List<String> filePaths = Collections.singletonList(filePath);
+        fileService.delete(filePaths);
+        log.debug("S3 object deleted for client");
     }
 
     private Client searchForClient(UUID clientId) {
         return clientRepository.findById(clientId).orElseThrow(() -> new LnFEntityNotFoundException("Client with id [%s] does not exist".formatted(clientId)));
     }
 
-    private ClientDocument searchForDocument(UUID documentId) {
-        return repository.findById(documentId).orElseThrow(() -> new LnFEntityNotFoundException("Document with id [%s] does not exist".formatted(documentId)));
+    private void uploadFile(String folder, MultipartFile file) {
+        String filePath = fileService.uploadFile(folder, file);
+        log.debug("File uploaded successfully to S3 bucket: {}", filePath);
     }
 
-    private ClientDocument searchForDocument(UUID clientId, DocumentType type) {
-        return repository.findByClientIdAndType(clientId, type).orElseThrow(() -> new LnFEntityNotFoundException("Document with clientId [%s] and type [%s] does not exist".formatted(clientId, type)));
-    }
-
-    private String uploadFile(String folder, MultipartFile file) {
-        return fileService.uploadFile(folder, file);
-    }
 }
