@@ -166,7 +166,7 @@ public class GstService {
         try {
             repository.saveAll(entities);
         } catch (RuntimeException e) {
-            String errorMessage = String.format("Failed to save gst for employee [%s]", entities.get(0).getClient().getId());
+            String errorMessage = String.format("Failed to save gst for employee [%s]", entities.getFirst().getClient().getId());
             throw new LnFException(errorMessage);
         }
     }
